--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-body {
-
-}
 h1 {
   font-family: system-ui;
   color: aqua;
@@ -36,7 +33,9 @@ li {
   padding: 10px;
   color: white; 
 }
-a {
+li a {
   text-decoration: none;
   color: white;
 }
+li a:hover{
+  color: aqua
